# BORA-BUDGET

./: MANIFEST.md  README.md  pyproject.toml
conf/: example_math500_vllm.yaml  mock_smoke.yaml
data/: math_dev.jsonl  math_test.jsonl  math_train.jsonl  sample_math.jsonl
scripts/: analyze_auto_threshold_bora_budget.py  analyze_bora_budget_auto_threshold_strict.py  analyze_bora_budget_e2.py  analyze_fixed_eval_budget_allocation.py  analyze_multibudget_switch.py  analyze_problem_disjoint_frontier.py  analyze_trigger_feature_ablation.py  analyze_trigger_frontier.py  analyze_trigger_quality_metrics.py  audit_completion_extraction.py  audit_math500_available_robust.py  audit_math500_robust_eval.py  audit_math_answer_eval.py  audit_self_consistency_fulltext.py  augment_karmed_rows_with_independent_checkers.py  augment_karmed_rows_with_meta.py  build_code_opportunity_rollouts.py  build_opportunity_rollouts.py  build_rescue_bandit_prior.py  evaluate_code_results.py  evaluate_math_answers_robust.py  inspect_robust_eval_flips.py  materialize_fixed_audit_result.py  prepare_code_mbpp_dataset.py  prepare_nonmath_mc_dataset.py  prepare_small_cross_dataset.py  run_baselines.py  run_batched_code_cot_vllm.py  run_batched_mc_cot_vllm.py  run_batched_self_consistency_vllm.py  run_batched_standard_cot_vllm.py  run_no_think_meta_probe_vllm.py  split_jsonl_train_eval.py  summarize_bora_switch_calibrated.py  summarize_codebench_miniloop.py  summarize_cross_model_bora_switch.py  train_karmed_budget_selector_fast.py  train_karmed_budget_trigger.py  train_karmed_trigger_ensemble_search.py
(+35 files in other folders)
