[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bora-budget-anonymous"
version = "0.1.0"
description = "Anonymous research code for BORA-Budget / BORA-Switch-Calibrated"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "accelerate>=0.26",
  "joblib>=1.3",
  "numpy>=1.23",
  "pandas>=1.5",
  "PyYAML>=6.0",
  "scipy>=1.9",
  "scikit-learn>=1.2",
  "torch>=2.1",
  "transformers>=4.40",
]

[project.optional-dependencies]
vllm = ["vllm"]
eval = ["math-verify", "sympy>=1.12"]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
